apps/monitoring/grafana/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer
  labels:
    name: grafana-image-renderer
spec:
  type: ClusterIP
  selector:
    app: grafana-image-renderer
  ports:
  - name: renderer
    port: 80
    targetPort: 8081
